objects/Quota__c.object
<CustomObject>
    <description>SFDC-4105:  Quota Import &amp; Assignment</description>
    <fields>
        <fullName>AllManagers__c</fullName>
        <label>All Managers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AllocateQuota__c</fullName>
        <label>Allocate Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <label>Business Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DirectQuota__c</fullName>
        <label>Direct Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GlobalVertical__c</fullName>
        <label>Global Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CMS</fullName>
                </value>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Legacy</fullName>
                </value>
                <value>
                    <fullName>Transport</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HierarchyFormula__c</fullName>
        <description>Formula field to be digested as text in TCRM recipe</description>
        <formula>Hierarchy__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hierarchy Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy__c</fullName>
        <label>Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndividualQuota__c</fullName>
        <label>Individual Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ManagerQuota__c</fullName>
        <description>SFDC-4599 To calculate Quota Owner&apos;s Team quota.</description>
        <formula>IndividualQuota__c + DirectQuota__c + TeamQuota__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OfferingType__c</fullName>
        <label>Offering Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Allocate Consulting</fullName>
                </value>
                <value>
                    <fullName>Allocate New Subscription</fullName>
                </value>
                <value>
                    <fullName>Allocate Onetime</fullName>
                </value>
                <value>
                    <fullName>Allocate Renewal</fullName>
                </value>
                <value>
                    <fullName>Analytics License Revenue</fullName>
                </value>
                <value>
                    <fullName>Analytics Upfront</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>New Subscription</fullName>
                </value>
                <value>
                    <fullName>Onetime</fullName>
                </value>
                <value>
                    <fullName>Overlay</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Revenue</fullName>
                </value>
                <value>
                    <fullName>Allocate New Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpenPositionCount__c</fullName>
        <label>Open Position Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpenPositionQuota__c</fullName>
        <label>Open Position Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OverlayQuota__c</fullName>
        <label>Overlay Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PositionName__c</fullName>
        <label>Position Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rep</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QuotaAmount__c</fullName>
        <label>Quota Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QuotaPeriod__c</fullName>
        <label>Quota Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuotaRegion__c</fullName>
        <label>Quota Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RepQuota__c</fullName>
        <description>SFDC-4599 To calculate Quota Owner&apos;s individual quota.</description>
        <formula>QuotaAmount__c + IndividualQuota__c + DirectQuota__c +  AllocateQuota__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RollQuota__c</fullName>
        <description>Defines if the quota record should be rolled up to managers</description>
        <formula>Contains(Right(ExternalId__c,2),&quot;_R&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Roll Quota</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesTeam__c</fullName>
        <label>Sales Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharedHierarchy__c</fullName>
        <description>SFDC-4930 Hierarchy of users manually shared via shared quota object</description>
        <label>Shared Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quota Database</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TeamQuota__c</fullName>
        <label>Team Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Quota</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>QuotaAmount__c</columns>
        <columns>DirectQuota__c</columns>
        <columns>TeamQuota__c</columns>
        <columns>AllocateQuota__c</columns>
        <columns>OverlayQuota__c</columns>
        <columns>GlobalVertical__c</columns>
        <columns>ExternalId__c</columns>
        <columns>Source__c</columns>
        <columns>QuotaPeriod__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Q{000000}</displayFormat>
        <label>Quota Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>